fix(host_overview): solve issue with badge alignment

--- a/host_overview/assets/css/widget.toolbar.css
+++ b/host_overview/assets/css/widget.toolbar.css
@@ -33,6 +33,7 @@
 
 .dashboard-widget-host_overview .toolbar .right {
   margin-left: auto;
+  justify-content: flex-end;
 }
 
 /* Badge */
